Fixed the positioning of the phones on mobile and tablet

--- a/_sass/themes.scss
+++ b/_sass/themes.scss
@@ -2218,7 +2218,10 @@
 	
 	.shareticket {
 		margin-top: 20px;
-		
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+	
 		@media (min-width: $tablet-landscape) {
 			display: grid;
 			grid-template-columns: 1fr 444px;
@@ -2231,6 +2234,10 @@
 	}
 	
 	.receiveticket {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		
 		@media (min-width: $tablet-landscape) {
 			display: grid;
 			grid-template-columns: 444px 1fr;
